--- a/Main.html
+++ b/Main.html
@@ -40,7 +40,7 @@
         <div class="content">
             <div class="card">
                 <div id="Project">
-                    <h1> Создание 2D платформера </h1>
+                    <h1> Обучение VR </h1>
                     <p> Здесь перечислены основные ресурсы для создания игры. Убедившись, что всё необходимое ПО установлено, вы можете перейти к созданию игры. <p>
                     <div style="display: flex; justify-content: center;">
                         <div id="github-button">
